Fix spacing issue for resume section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1743,7 +1743,7 @@ input, select, textarea {
 			padding: 5em 5em 3em 5em ;
 			max-width: 100%;
 			width: 100%;
-			text-align: center;
+			text-align: left;
 		}
 
 			@media screen and (max-width: 1680px) {
@@ -3033,8 +3033,8 @@ input, select, textarea {
  * ------------------------------------------------------------------- 
  */
  #resume {
-	padding-top: 12rem;
-	padding-bottom: 12rem;
+	padding-top: 2rem;
+	padding-bottom: 3rem;
 }
 
 #resume .resume-header {
